--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -7,6 +7,10 @@ imports:
 #        result_cache_driver: apc
 #        query_cache_driver: apc
 
+doctrine:
+    dbal:
+        url: "%env(DATABASE_URL)%"
+
 monolog:
     handlers:
         main:
