--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -9,7 +9,7 @@ imports:
 
 doctrine:
     dbal:
-        url: "%env(DATABASE_URL)%"
+        url: "%env(CLEARDB_DATABASE_URL)%"
 
 monolog:
     handlers:
