--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,3 +20,7 @@ parameters:
 
     last_fm_api_key: b204e6087c1bfaf7ccc669f500d1beda
     last_fm_api_secret: b299de008c34db4a10b8a8280173fe4c
+
+    spotify_client_id: 5244629eb8e5424691226e8347e12c66
+    spotify_client_secret: dbd023e4013d49c9b336f4d1ad9ee14e
+    spotify_redirect: ~
